<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.vistula.mkedron.w3_kedron_java.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/dataButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="152dp"
        android:onClick="sendMessage"
        android:text="@string/send_data"
        app:layout_constraintLeft_toRightOf="@+id/dataText"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/dataText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="153dp"
        android:ems="10"
        android:hint="@string/data_text_field"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="136dp"
        android:layout_marginEnd="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/dataText"
        app:layout_constraintTop_toBottomOf="@+id/dataText"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:id="@+id/radioGroup">

        <RadioButton
            android:id="@+id/resultRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="19dp"
            android:text="@string/go_to_result"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/messageRadioButton"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1" />

        <RadioButton
            android:id="@+id/messageRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:text="@string/go_to_message"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1" />
    </RadioGroup>

    <Spinner
        android:id="@+id/nextViewSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="17dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/findContactButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="findContactListener"
        android:text="@string/find_contact_button"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="27dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="49dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="41dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nextViewSpinner" />

</android.support.constraint.ConstraintLayout>
